SimpleLink サンプル修正

--- a/xoops_trust_path/libs/NBFrame/examples/xoops_root_path/modules/simplelink/templates/main.html
+++ b/xoops_trust_path/libs/NBFrame/examples/xoops_root_path/modules/simplelink/templates/main.html
@@ -1,1 +1,10 @@
-<{$content}>
+<{foreach item=category from=$simplelink_list}>
+<ul>
+  <{if $category->getExtraVar('_object_level_') == 1 }>
+  <li style="list-style-type: none; margin-bottom=20px;">
+    <span style="font-size:medium"><b>&laquo;<{$category->getVar('category_name')}>&raquo;</b></span>
+	<{include file="db:`$mydirname`_main_category_item.html" category=$category list=$simplelink_list}>
+  </li>
+  <{/if}>
+</ul>
+<{/foreach}>
