SimpleLink サンプル修正

--- a/xoops_trust_path/libs/NBFrame/examples/xoops_root_path/modules/simplelink/templates/main.html
+++ b/xoops_trust_path/libs/NBFrame/examples/xoops_root_path/modules/simplelink/templates/main.html
@@ -1,3 +1,5 @@
+<h3><{$simplelink_moduleObject->getVar('name')}></h3>
+<br />
 <{foreach item=category from=$simplelink_list}>
 <ul>
   <{if $category->getExtraVar('_object_level_') == 1 }>
