--- a/xoops_trust_path/libs/NBFrame/examples/xoops_root_path/modules/simplelink/templates/main.html
+++ b/xoops_trust_path/libs/NBFrame/examples/xoops_root_path/modules/simplelink/templates/main.html
@@ -1,5 +1,4 @@
-<h3><{$simplelink_moduleObject->getVar('name')}></h3>
-<br />
+<h4 style="margin-top:0px;margin-left:-5px;"><{NBFrameCrumBreadBase}></h4>
 <{foreach item=category from=$simplelink_list}>
 <ul>
   <{if $category->getExtraVar('_object_level_') == 1 }>
